crates/check_cli/tests/snapshots/main_cases_monorepo/should_extend_from_the_root_config.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `packages/lib/check.json`

```json
{
  "root": false,
  "extends": "//",
  "formatter": {
    "indentStyle": "space",
    "indentWidth": 8
  },
  "javascript": {
    "formatter": {
      "quoteStyle": "double"
    }
  }
}
```

## `check.json`

```json
{
  "root": true,
  "formatter": {
    "indentStyle": "space",
    "indentWidth": 2
  },
  "javascript": {
    "formatter": {
      "quoteStyle": "single"
    }
  }
}
```

## `file.js`

```js
function f() { const lorem_and_ipsum = 'lorem ipsum'; }
```

## `packages/lib/file.js`

```js
function f() { const lorem_and_ipsum = 'lorem ipsum'; }
```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
check.json format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
     1    │ - 
     2  1 │   {
     3    │ - ····"root":·true,
     4    │ - ····"formatter":·{
     5    │ - ········"indentStyle":·"space",
     6    │ - ········"indentWidth":·2
     7    │ - ····},
     8    │ - ····"javascript":·{
     9    │ - ········"formatter":·{
    10    │ - ············"quoteStyle":·"single"
    11    │ - ········}
    12    │ - ····}
        2 │ + ··"root":·true,
        3 │ + ··"formatter":·{
        4 │ + ····"indentStyle":·"space",
        5 │ + ····"indentWidth":·2
        6 │ + ··},
        7 │ + ··"javascript":·{
        8 │ + ····"formatter":·{
        9 │ + ······"quoteStyle":·"single"
       10 │ + ····}
       11 │ + ··}
    13 12 │   }
    14 13 │   
  

```

```block
file.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - function·f()·{·const·lorem_and_ipsum·=·'lorem·ipsum';·}
      1 │ + function·f()·{
      2 │ + ··const·lorem_and_ipsum·=·'lorem·ipsum';
      3 │ + }
      4 │ + 
  

```

```block
packages/lib/check.json format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
     1    │ - 
     2  1 │   {
     3    │ - ····"root":·false,
     4    │ - ····"extends":·"//",
     5    │ - ····"formatter":·{
     6    │ - ········"indentStyle":·"space",
     7    │ - ········"indentWidth":·8
     8    │ - ····},
     9    │ - ····"javascript":·{
    10    │ - ········"formatter":·{
    11    │ - ············"quoteStyle":·"double"
    12    │ - ········}
    13    │ - ····}
        2 │ + ········"root":·false,
        3 │ + ········"extends":·"//",
        4 │ + ········"formatter":·{
        5 │ + ················"indentStyle":·"space",
        6 │ + ················"indentWidth":·8
        7 │ + ········},
        8 │ + ········"javascript":·{
        9 │ + ················"formatter":·{
       10 │ + ························"quoteStyle":·"double"
       11 │ + ················}
       12 │ + ········}
    14 13 │   }
    15 14 │   
  

```

```block
packages/lib/file.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - function·f()·{·const·lorem_and_ipsum·=·'lorem·ipsum';·}
      1 │ + function·f()·{
      2 │ + ········const·lorem_and_ipsum·=·"lorem·ipsum";
      3 │ + }
      4 │ + 
  

```

```block
Checked 4 files in <TIME>. No fixes applied.
Found 4 errors.
```
