crates/check_cli/tests/snapshots/main_cases_monorepo/should_fail_for_nested_roots.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `check.json`

```json
{
  "javascript": {
    "formatter": {
      "quoteStyle": "double"
    }
  }
}
```

## `packages/lib/check.json`

```json
{
  "javascript": {
    "formatter": {
      "quoteStyle": "double"
    }
  }
}
```

# Termination Message

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Check exited because the configuration resulted in errors. Please fix them.
  


```

# Emitted Messages

```block
<TEMP_DIR>/should_fail_for_nested_roots/packages/lib/check.json configuration ━━━━━━━━━━━━━━━━━━━━

  × Found a nested root configuration, but there's already a root configuration.
  
  i The other configuration was found in <TEMP_DIR>/should_fail_for_nested_roots.
  
  i Use the migration command from the root of the project to update the configuration.
  
  $ check migrate --write
  

```
