crates/check_cli/tests/snapshots/main_cases_monorepo/should_find_settings_when_run_from_nested_dir.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `packages/lib/check.jsonc`

```json
{
  "extends": "//",
  "linter": {
    "rules": {
      "correctness": { "noUnusedVariables": "error" }
    }
  }
}
```

## `check.jsonc`

```json
{
  "linter": {
    "rules": {
      "correctness": { "noUnusedVariables": "off" },
      "suspicious": { "noDebugger": "off" }
    }
  }
}
```

## `file.js`

```js
let a; debugger
```

## `packages/lib/file.js`

```js
let a; debugger
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.js:1:5 lint/correctness/noUnusedVariables  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This variable a is unused.
  
  > 1 │ let a; debugger
      │     ^
  
  i Unused variables are often the result of an incomplete refactoring, typos, or other sources of bugs.
  
  i Unsafe fix: If this is intentional, prepend a with an underscore.
  
  - let·a;·debugger
  + let·_a;·debugger
  

```

```block
Checked 2 files in <TIME>. No fixes applied.
Found 1 error.
```
