crates/check_cli/tests/snapshots/main_cases_monorepo/should_ignore_linter_nested_file.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `package/check.jsonc`

```json
{
  "extends": "//",
  "linter": {
    "includes": ["**", "!**/*.test.js"]
  }
}
```

## `check.jsonc`

```json
{
  "files": {
    "includes": ["**"]
  }
}
```

## `file.js`

```js
let a; debugger
```

## `package/file.test.js`

```js
let a; debugger
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.js:1:5 lint/correctness/noUnusedVariables  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This variable a is unused.
  
  > 1 │ let a; debugger
      │     ^
  
  i Unused variables are often the result of an incomplete refactoring, typos, or other sources of bugs.
  
  i Unsafe fix: If this is intentional, prepend a with an underscore.
  
  - let·a;·debugger
  + let·_a;·debugger
  

```

```block
file.js:1:8 lint/suspicious/noDebugger  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This is an unexpected use of the debugger statement.
  
  > 1 │ let a; debugger
      │        ^^^^^^^^
  
  i Unsafe fix: Remove debugger statement
  
    1 │ let·a;·debugger
      │        --------

```

```block
Checked 3 files in <TIME>. No fixes applied.
Found 1 error.
Found 1 warning.
```
