crates/check_cli/tests/snapshots/main_cases_monorepo/should_ignore_nested_configuration_in_ignored_directory.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `vendor/check.jsonc`

```json
{
  "root": true,
  "linter": {
    "rules": {
      "correctness": { "noUnusedVariables": "error" }
    }
  }
}
```

## `check.jsonc`

```json
{
  "files": {
    "includes": ["**/*.js", "!vendor"]
  },
  "linter": {
    "rules": {
      "correctness": { "noUnusedVariables": "off" },
      "suspicious": { "noDebugger": "off" }
    }
  }
}
```

## `file.js`

```js
let a; debugger
```

## `vendor/foo/file.js`

```js
let a; debugger
```

# Emitted Messages

```block
Checked 2 files in <TIME>. No fixes applied.
```
