crates/check_cli/tests/snapshots/main_cases_monorepo/when_running_from_a_subdirectory_should_extend_from_the_root_config.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `packages/lib/check.json`

```json
{
  "root": false,
  "extends": "//",
  "javascript": {
    "formatter": {
      "quoteStyle": "double"
    }
  }
}
```

## `check.json`

```json
{
  "formatter": {
    "indentStyle": "space",
    "indentWidth": 2
  }
}
```

## `file.js`

```js
function f() { const lorem_and_ipsum = 'lorem ipsum'; }
```

## `packages/lib/file.js`

```js
function f() { const lorem_and_ipsum = 'lorem ipsum'; }
```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
check.json format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
     1    │ - 
     2  1 │   {
     3    │ - ····"root":·false,
     4    │ - ····"extends":·"//",
     5    │ - ····"javascript":·{
     6    │ - ········"formatter":·{
     7    │ - ············"quoteStyle":·"double"
     8    │ - ········}
     9    │ - ····}
        2 │ + ··"root":·false,
        3 │ + ··"extends":·"//",
        4 │ + ··"javascript":·{
        5 │ + ····"formatter":·{
        6 │ + ······"quoteStyle":·"double"
        7 │ + ····}
        8 │ + ··}
    10  9 │   }
    11 10 │   
  

```

```block
file.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - function·f()·{·const·lorem_and_ipsum·=·'lorem·ipsum';·}
      1 │ + function·f()·{
      2 │ + ··const·lorem_and_ipsum·=·"lorem·ipsum";
      3 │ + }
      4 │ + 
  

```

```block
Checked 2 files in <TIME>. No fixes applied.
Found 2 errors.
```
